--- a/quickstarts/defaultcamelcontext/pom.xml
+++ b/quickstarts/defaultcamelcontext/pom.xml
@@ -48,6 +48,20 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- DeltaSpike - Required to run camel:run -->
+        <dependency>
+            <groupId>org.apache.deltaspike.cdictrl</groupId>
+            <artifactId>deltaspike-cdictrl-api</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.cdictrl</groupId>
+            <artifactId>deltaspike-cdictrl-weld</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Java EE API -->
         <dependency>
             <groupId>javax</groupId>
