--- a/quickstarts/web-jetty/pom.xml
+++ b/quickstarts/web-jetty/pom.xml
@@ -13,4 +13,18 @@
     <name>Camel CDI :: Quickstarts :: Web Resources for Jetty.</name>
     <packaging>war</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>${example.groupId}</groupId>
+            <artifactId>${example.artifactId}</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
+
 </project>
