--- a/quickstarts/web-jetty/pom.xml
+++ b/quickstarts/web-jetty/pom.xml
@@ -13,11 +13,17 @@
     <name>Camel CDI :: Quickstarts :: Web Resources for Jetty.</name>
     <packaging>war</packaging>
 
+    <properties>
+        <example.groupId>io.astefanutti.camel.cdi</example.groupId>
+        <example.artifactId>simplecontextname</example.artifactId>
+        <example.version>1.1-SNAPSHOT</example.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${example.groupId}</groupId>
             <artifactId>${example.artifactId}</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>${example.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
