--- a/pom.xml
+++ b/pom.xml
@@ -62,13 +62,14 @@
             <url>http://repository.jboss.org/nexus/content/repositories/releases</url>
         </repository>
         <repository>
-            <id>maven - central</id>
+            <id>maven-central</id>
             <url>http://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Maven dependencies -->
         <camel.version>2.14.1</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
@@ -82,8 +83,7 @@
         <arquillian.weld.version>1.0.0.CR8</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.1.1</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-6</shrinkwrap.descriptors.version>
-
-        <!-- Maven Plugins -->
+        <!-- Maven plugins -->
         <maven-exec-plugin-version>1.3.2</maven-exec-plugin-version>
         <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
         <maven-wildfly-plugin.version>1.0.2.Final</maven-wildfly-plugin.version>
@@ -112,12 +112,6 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.9</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>com.mycila</groupId>
-                    <artifactId>license-maven-plugin</artifactId>
-                    <version>2.6</version>
                 </plugin>
 
                 <plugin>
@@ -189,7 +183,8 @@
     <dependencyManagement>
         <dependencies>
 
-            <!-- Project -->
+            <!-- project dependencies -->
+
             <dependency>
                 <groupId>io.astefanutti.camel.cdi</groupId>
                 <artifactId>camel-cdi</artifactId>
@@ -400,6 +395,5 @@
 
         </dependencies>
     </dependencyManagement>
-
 
 </project>
