--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -68,6 +68,11 @@
 
                 <dependency>
                     <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-annotation_1.2_spec</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
                     <artifactId>geronimo-interceptor_1.2_spec</artifactId>
                 </dependency>
 
