--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,13 @@
 
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-annotation_1.2_spec</artifactId>
+                <version>1.0-alpha-1</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-interceptor_1.2_spec</artifactId>
                 <version>1.0-alpha-1</version>
                 <scope>provided</scope>
