--- a/camel-maven-plugin/pom.xml
+++ b/camel-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>camel-cdi-parent</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
-        <version>1.1.0</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-maven-plugin</artifactId>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
-            <version>1.1.0</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
