--- a/quickstarts/pom.xml
+++ b/quickstarts/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>camel-cdi-parent</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
-        <version>1.1.0</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -355,7 +355,7 @@
                 <dependency>
                     <groupId>io.astefanutti.camel.cdi</groupId>
                     <artifactId>web-tomcat</artifactId>
-                    <version>1.1.0</version>
+                    <version>1.2-SNAPSHOT</version>
                     <type>war</type>
                 </dependency>
             </dependencies>
