--- a/quickstarts/web-jetty/pom.xml
+++ b/quickstarts/web-jetty/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>quickstarts</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
-        <version>1.1.0</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
     <properties>
         <quickstart.groupId>io.astefanutti.camel.cdi</quickstart.groupId>
         <quickstart.artifactId>simplecontextname</quickstart.artifactId>
-        <quickstart.version>1.1.0</quickstart.version>
+        <quickstart.version>1.2-SNAPSHOT</quickstart.version>
     </properties>
 
     <dependencies>
