--- a/quickstarts/web-tomcat/pom.xml
+++ b/quickstarts/web-tomcat/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>quickstarts</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
-        <version>1.1.0</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
