--- a/quickstarts/web-jetty/pom.xml
+++ b/quickstarts/web-jetty/pom.xml
@@ -33,22 +33,17 @@
         </dependency>
 
         <!-- Camel -->
+
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
         </dependency>
+
         <dependency>
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
+            <version>${project.version}</version>
             <exclusions>
-                <exclusion>
-                    <groupId>org.apache.deltaspike.core</groupId>
-                    <artifactId>deltaspike-core-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.deltaspike.cdictrl</groupId>
-                    <artifactId>deltaspike-cdictrl-api</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
@@ -56,7 +51,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Weld2 -->
+        <!-- Weld -->
         <dependency>
             <groupId>org.jboss.weld.servlet</groupId>
             <artifactId>weld-servlet</artifactId>
@@ -69,19 +64,20 @@
             <version>${maven-jetty-plugin.version}</version>
         </dependency>
 
-        <!-- Logging / scope runtime added otherwise
-        it was not added to the WAR -->
+        <!-- Logging / scope runtime added otherwise it was not added to the WAR -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <!-- Web Container : Jetty Plugin -->
@@ -90,6 +86,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${maven-jetty-plugin.version}</version>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
