Disable OWB Travis CI build until OWB-1040 (lifecycle events sequence) is worked out

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-  - mvn test -Pjacoco -Powb -pl envs/se
+# Disabled until OWB-1040 (lifecycle events sequence) is worked out
+#  - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
