--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -6,6 +6,7 @@
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-envs</artifactId>
         <version>1.2-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>camel-cdi-ee</artifactId>
@@ -22,16 +23,17 @@
 
     <dependencies>
 
-        <!-- provided dependencies -->
-
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-        </dependency>
+       
 
         <!-- test dependencies -->
 
-        <dependency>
+		<dependency>
+			<groupId>org.jboss.spec</groupId>
+			<artifactId>jboss-javaee-6.0</artifactId>
+			<type>pom</type>
+		</dependency>
+		
+		<dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-depchain</artifactId>
             <type>pom</type>
@@ -64,22 +66,16 @@
 
                 <!-- test dependencies -->
 
-                <dependency>
-                    <groupId>org.jboss.weld</groupId>
-                    <artifactId>weld-core-impl</artifactId>
-                    <scope>test</scope>
-                </dependency>
+				<dependency>
+					<groupId>org.jboss.weld</groupId>
+					<artifactId>weld-core</artifactId>
+				</dependency>
 
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
                 </dependency>
-
-                <dependency>
-                    <groupId>org.glassfish</groupId>
-                    <artifactId>javax.el</artifactId>
-                    <scope>test</scope>
-                </dependency>
+				
 
             </dependencies>
         </profile>
