--- a/envs/karaf/pom.xml
+++ b/envs/karaf/pom.xml
@@ -4,6 +4,7 @@
         <artifactId>camel-cdi-envs</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <version>1.2-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
