--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -1,101 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.astefanutti.camel.cdi</groupId>
-        <artifactId>camel-cdi-envs</artifactId>
-        <version>1.2-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>io.astefanutti.camel.cdi</groupId>
+		<artifactId>camel-cdi-envs</artifactId>
+		<version>1.2-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-    <artifactId>camel-cdi-se</artifactId>
-    <name>Camel CDI Java SE Environment</name>
+	<artifactId>camel-cdi-se</artifactId>
+	<name>Camel CDI Java SE Environment</name>
 
-    <profiles>
+	<profiles>
 
-        <profile>
-            <id>weld</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+		<profile>
+			<id>weld</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 
-            <dependencies>
+			<dependencies>
 
-                <!-- provided dependencies -->
+				<!-- provided dependencies -->
 
-                <dependency>
-                    <groupId>javax.enterprise</groupId>
-                    <artifactId>cdi-api</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>javax.enterprise</groupId>
+					<artifactId>cdi-api</artifactId>
+				</dependency>
 
-                <!-- test dependencies -->
+				<!-- test dependencies -->
 
-                <dependency>
-                    <groupId>org.jboss.weld</groupId>
-                    <artifactId>weld-core-impl</artifactId>
-                    <scope>test</scope>
-                </dependency>
+				<dependency>
+					<groupId>org.jboss.weld</groupId>
+					<artifactId>weld-core</artifactId>
+					<scope>test</scope>
+				</dependency>
 
-                <dependency>
-                    <groupId>org.jboss.arquillian.container</groupId>
-                    <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.jboss.spec</groupId>
+					<artifactId>jboss-javaee-6.0</artifactId>
+					<type>pom</type>
+				</dependency>
 
-            </dependencies>
-        </profile>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+				</dependency>
 
-        <profile>
-            <id>owb</id>
+			</dependencies>
+		</profile>
 
-            <properties>
-                <!-- JUL configuration for OWB -->
-                <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties</argLine>
-            </properties>
+		<profile>
+			<id>owb</id>
 
-            <dependencies>
+			<properties>
+				<!-- JUL configuration for OWB -->
+				<argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties</argLine>
+			</properties>
 
-                <!-- provided dependencies -->
+			<dependencies>
 
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-jcdi_1.1_spec</artifactId>
-                </dependency>
+				<!-- provided dependencies -->
 
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-atinject_1.0_spec</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-jcdi_1.1_spec</artifactId>
+				</dependency>
 
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-annotation_1.2_spec</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-atinject_1.0_spec</artifactId>
+				</dependency>
 
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-interceptor_1.2_spec</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-annotation_1.2_spec</artifactId>
+				</dependency>
 
-                <!-- test dependencies -->
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-interceptor_1.2_spec</artifactId>
+				</dependency>
 
-                <dependency>
-                    <groupId>org.apache.openwebbeans.arquillian</groupId>
-                    <artifactId>owb-arquillian-standalone</artifactId>
-                </dependency>
+				<!-- test dependencies -->
 
-                <dependency>
-                    <groupId>org.apache.openwebbeans</groupId>
-                    <artifactId>openwebbeans-impl</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans.arquillian</groupId>
+					<artifactId>owb-arquillian-standalone</artifactId>
+				</dependency>
 
-                <dependency>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>jul-to-slf4j</artifactId>
-                </dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans</groupId>
+					<artifactId>openwebbeans-impl</artifactId>
+				</dependency>
 
-            </dependencies>
-        </profile>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jul-to-slf4j</artifactId>
+				</dependency>
 
-    </profiles>
+			</dependencies>
+		</profile>
+
+	</profiles>
 
 </project>
