CDI 1.0 support improvements Add support for OpenWebBeans 1.2.x FIX custom Camel contexts detection dependending on lifecycle events ordering Fix decorated annotated type annotation retrieval by type Optimizing CDI extension lifecycle events Remove uncessary annotated field override class Improve CDI SPI helper Fix POMs formatting Enable Travis CI on cdi-1.0 branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,14 @@ cache:
 
 branches:
   only:
-    - master
+    - cdi-1.0
 
 install:
   - mvn clean install -Dmaven.test.skip.exec
 
 script:
   - mvn test -Pjacoco -Pweld
-# Disabled until OWB-1040 (lifecycle events sequence) is worked out
-#  - mvn test -Pjacoco -Powb -pl envs/se
+  - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
