Upgrade to JaCoCo version 0.7.4 and Coveralls plugin version 3.1.0

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -88,6 +88,16 @@
                     </instructions>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>org/apache/camel/cdi/Main.class</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
