--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <slf4j.version>1.7.10</slf4j.version>
         <weld.version>1.1.28.Final</weld.version>
         <owb.version>1.2.7</owb.version>
-        <wildfly.version>8.2.0.Final</wildfly.version>
+        <jboss-as.version>7.1.1.Final</jboss-as.version>
         <arquillian.version>1.1.7.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>1.0.0.CR8</arquillian.weld.version>
@@ -219,6 +219,12 @@
                 <version>${jboss-javaee-6.0.version}</version>
                 <type>pom</type>
                 <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.jboss.spec.javax.servlet.jstl</groupId>
+                        <artifactId>jboss-jstl-api_1.2_spec</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             
             <dependency>
@@ -366,19 +372,13 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- WildFly -->
+            <!-- JBoss AS -->
 
             <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-arquillian-container-managed</artifactId>
-                <version>${wildfly.version}</version>
+                <groupId>org.jboss.as</groupId>
+                <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                <version>${jboss-as.version}</version>
                 <scope>test</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.jboss.logmanager</groupId>
-                        <artifactId>log4j-jboss-logmanager</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
         </dependencies>
