--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Maven dependencies -->
-        <camel.version>2.15.0</camel.version>
+        <camel.version>2.15.1</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
         <javaee.version>7.0</javaee.version>
-        <slf4j.version>1.7.10</slf4j.version>
-        <weld.version>2.2.10.Final</weld.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <weld.version>2.2.10.SP1</weld.version>
         <owb.version>1.5.0-SNAPSHOT</owb.version>
         <wildfly.version>8.2.0.Final</wildfly.version>
         <arquillian.version>1.1.7.Final</arquillian.version>
@@ -86,7 +86,7 @@
         <shrinkwrap.resolver.version>2.1.1</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-7</shrinkwrap.descriptors.version>
         <!-- Maven plugins -->
-        <maven-exec-plugin-version>1.3.2</maven-exec-plugin-version>
+        <maven-exec-plugin-version>1.4.0</maven-exec-plugin-version>
         <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
         <maven-wildfly-plugin.version>1.0.2.Final</maven-wildfly-plugin.version>
         <maven-jetty-plugin.version>9.3.0.M1</maven-jetty-plugin.version>
@@ -113,19 +113,19 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.9</version>
+                    <version>1.9.1</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.2</version>
+                    <version>3.3</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.18</version>
+                    <version>2.18.1</version>
                 </plugin>
 
                 <plugin>
@@ -152,13 +152,13 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.5</version>
+                    <version>1.6</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5</version>
+                    <version>3.0-r1585899</version>
                     <configuration>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <mavenExecutorId>forked-path</mavenExecutorId>
@@ -218,7 +218,7 @@
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jcdi_1.1_spec</artifactId>
-                <version>1.0-alpha-1</version>
+                <version>1.0</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -232,14 +232,14 @@
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-annotation_1.2_spec</artifactId>
-                <version>1.0-alpha-1</version>
+                <version>1.0</version>
                 <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-interceptor_1.2_spec</artifactId>
-                <version>1.0-alpha-1</version>
+                <version>1.0</version>
                 <scope>provided</scope>
             </dependency>
 
