--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,6 @@
     </scm>
 
     <repositories>
-        <!-- TODO: remove when OWB 1.5.0 is released -->
-        <repository>
-            <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
         <repository>
             <id>jboss-releases</id>
             <url>http://repository.jboss.org/nexus/content/repositories/releases</url>
@@ -78,7 +70,7 @@
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.12</slf4j.version>
         <weld.version>2.2.10.SP1</weld.version>
-        <owb.version>1.5.0-SNAPSHOT</owb.version>
+        <owb.version>1.5.0</owb.version>
         <wildfly.version>8.2.0.Final</wildfly.version>
         <arquillian.version>1.1.7.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
