--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-# Disabled until OWB-1040 (lifecycle events sequence) is worked out
-#  - mvn test -Pjacoco -Powb -pl envs/se
+  - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
