--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,10 @@
         <deltaspike.version>1.1.0</deltaspike.version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <weld.version>2.2.10.SP1</weld.version>
+        <weld.version>2.2.11.Final</weld.version>
         <owb.version>1.5.0</owb.version>
         <wildfly.version>8.2.0.Final</wildfly.version>
-        <arquillian.version>1.1.7.Final</arquillian.version>
+        <arquillian.version>1.1.8.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>1.0.0.CR8</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.1.1</shrinkwrap.resolver.version>
