--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,22 @@
             <id>maven-central</id>
             <url>http://repo1.maven.org/maven2/</url>
         </repository>
+        <repository>
+            <id>apache-snapshots</id>
+            <url>http://repository.apache.org/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Maven dependencies -->
-        <camel.version>2.15.1</camel.version>
+        <camel.version>2.16-SNAPSHOT</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
         <javaee.version>7.0</javaee.version>
