Add support for WildFly 9
Update supported container versions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 script:
   - mvn test -Pjacoco -Pweld
   - mvn test -Pjacoco -Powb -pl envs/se
-  - mvn test -Pjacoco -Pwildfly -pl envs/ee
+  - mvn test -Pjacoco -Pwildfly-9.x -pl envs/ee
 
 jdk:
   - oraclejdk7
