--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,8 @@
         <slf4j.version>1.7.12</slf4j.version>
         <weld.version>2.3.0.Final</weld.version>
         <owb.version>1.6.2</owb.version>
-        <wildfly.version>8.2.1.Final</wildfly.version>
+        <wildfly-8.version>8.2.1.Final</wildfly-8.version>
+        <wildfly-9.version>9.0.1.Final</wildfly-9.version>
         <arquillian.version>1.1.9.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>1.0.0.CR9</arquillian.weld.version>
@@ -368,7 +369,7 @@
             <dependency>
                 <groupId>org.wildfly</groupId>
                 <artifactId>wildfly-arquillian-container-managed</artifactId>
-                <version>${wildfly.version}</version>
+                <version>${wildfly-8.version}</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
