--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Maven dependencies -->
-        <camel.version>2.16-SNAPSHOT</camel.version>
+        <camel.version>2.16.0</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
         <javaee.version>7.0</javaee.version>
