Use latest WildFly Arquillian adapter
Do not use Weld BOM as it introduces conflicting version for the
WildFly Arquillian adapter.
Activate WildFly 8 Travis CI build.

--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -75,12 +75,6 @@
                     <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
                 </dependency>
 
-                <dependency>
-                    <groupId>org.glassfish</groupId>
-                    <artifactId>javax.el</artifactId>
-                    <scope>test</scope>
-                </dependency>
-
             </dependencies>
         </profile>
 
@@ -190,7 +184,7 @@
                 <!-- test dependencies -->
 
                 <dependency>
-                    <groupId>org.wildfly</groupId>
+                    <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
                 </dependency>
 
