--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
 script:
   - mvn test -Pjacoco -Pweld
   - mvn test -Pjacoco -Powb -pl envs/se
+  - mvn test -Pjacoco -Pwildfly-8.x -pl envs/ee
   - mvn test -Pjacoco -Pwildfly-9.x -pl envs/ee
 
 jdk:
