--- a/pom.xml
+++ b/pom.xml
@@ -328,10 +328,23 @@
 
             <dependency>
                 <groupId>org.jboss.weld</groupId>
-                <artifactId>weld-core-bom</artifactId>
+                <artifactId>weld-core-impl</artifactId>
                 <version>${weld.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.weld.se</groupId>
+                <artifactId>weld-se-core</artifactId>
+                <version>${weld.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.weld.servlet</groupId>
+                <artifactId>weld-servlet</artifactId>
+                <version>${weld.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
@@ -364,7 +377,7 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- WildFly -->
+            <!-- WildFly 8 Arquillian adapter -->
 
             <dependency>
                 <groupId>org.wildfly</groupId>
@@ -379,6 +392,14 @@
                 </exclusions>
             </dependency>
 
+            <!-- WildFly 9+ Arquillian adapter -->
+
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-container-managed</artifactId>
+                <version>1.1.0.Alpha1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
