--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly-8.x -pl envs/ee
   - mvn test -Pjacoco -Pwildfly-9.x -pl envs/ee
+  - mvn test -Pjacoco -Pwildfly-camel -pl envs/ee
 
 jdk:
   - oraclejdk7
