--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -38,6 +38,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- FIXME: There should be not dependency on WildFly Camel -->
+        <dependency>
+            <groupId>org.wildfly.camel</groupId>
+            <artifactId>wildfly-camel-subsystem</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.camel</groupId>
+                    <artifactId>camel-cdi</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
     <profiles>
@@ -112,6 +125,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <excludedGroups>org.apache.camel.cdi.ee.category.WildFlyCamel</excludedGroups>
                             <systemProperties>
                                 <arquillian.launch>wildfly-8-managed</arquillian.launch>
                                 <jacoco.agent>${argLine}</jacoco.agent>
@@ -168,8 +182,116 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <excludedGroups>org.apache.camel.cdi.ee.category.WildFlyCamel</excludedGroups>
                             <systemProperties>
                                 <arquillian.launch>wildfly-9-managed</arquillian.launch>
+                                <jacoco.agent>${argLine}</jacoco.agent>
+                            </systemProperties>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <dependencies>
+
+                <!-- provided dependencies -->
+
+                <!-- test dependencies -->
+
+                <dependency>
+                    <groupId>org.wildfly.arquillian</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                </dependency>
+
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>wildfly-camel</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-and-patch-wildfly</id>
+                                <phase>generate-test-resources</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <markersDirectory>${project.build.directory}/wildfly-camel</markersDirectory>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.wildfly</groupId>
+                                            <artifactId>wildfly-dist</artifactId>
+                                            <version>${wildfly-9.version}</version>
+                                            <type>zip</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/wildfly-camel</outputDirectory>
+                                        </artifactItem>
+                                        <artifactItem>
+                                            <groupId>org.wildfly.camel</groupId>
+                                            <artifactId>wildfly-camel-patch</artifactId>
+                                            <type>tar.gz</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/wildfly-camel/wildfly-${wildfly-9.version}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>patch-camel-cdi</id>
+                                <phase>generate-test-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>io.astefanutti.camel.cdi</groupId>
+                                            <artifactId>camel-cdi</artifactId>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}/wildfly-camel/wildfly-${wildfly-9.version}/modules/system/layers/fuse/org/apache/camel/component/cdi/main/</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        <artifactId>replacer</artifactId>
+                        <version>1.5.3</version>
+                        <executions>
+                            <execution>
+                                <id>replace-camel-cdi</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/wildfly-camel/wildfly-${wildfly-9.version}/modules/system/layers/fuse/org/apache/camel/component/cdi/main/module.xml</file>
+                                    <unescape>false</unescape>
+                                    <regex>true</regex>
+                                    <replacements>
+                                        <replacement>
+                                            <token>resource-root path="camel-cdi-.*\.jar"</token>
+                                            <value>resource-root path="camel-cdi-${project.version}.jar"</value>
+                                        </replacement>
+                                    </replacements>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemProperties>
+                                <arquillian.launch>wildfly-camel-managed</arquillian.launch>
                                 <jacoco.agent>${argLine}</jacoco.agent>
                             </systemProperties>
                         </configuration>
