DeltaSpike dependencies management

--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.deltaspike.cdictrl</groupId>
+                <artifactId>deltaspike-cdictrl-api</artifactId>
+                <version>${deltaspike.version}</version>
+                <optional>true</optional>
+            </dependency>
+
             <!-- provided dependencies -->
 
             <dependency>
@@ -366,6 +373,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.deltaspike.cdictrl</groupId>
+                <artifactId>deltaspike-cdictrl-weld</artifactId>
+                <version>${deltaspike.version}</version>
+                <scope>test</scope>
+            </dependency>
+
             <!-- OpenWebBeans -->
 
             <dependency>
@@ -379,6 +393,13 @@
                 <groupId>org.apache.openwebbeans.arquillian</groupId>
                 <artifactId>owb-arquillian-standalone</artifactId>
                 <version>${owb.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.cdictrl</groupId>
+                <artifactId>deltaspike-cdictrl-owb</artifactId>
+                <version>${deltaspike.version}</version>
                 <scope>test</scope>
             </dependency>
 
