--- a/envs/karaf/itest/pom.xml
+++ b/envs/karaf/itest/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>itest</artifactId>
-    <name>Camel CDI Karaf :: iTest</name>
+    <name>Camel CDI :: Environments :: Karaf Tests</name>
 
     <properties>
         <gravia.version>1.1.0.Beta43</gravia.version>
