--- a/envs/karaf/pom.xml
+++ b/envs/karaf/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>karaf</artifactId>
-    <name>Camel CDI Karaf</name>
+    <name>Camel CDI :: Environments :: Karaf</name>
     <packaging>pom</packaging>
 
     <modules>
