--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>camel-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <name>Camel :: Maven Plugins :: Camel Maven Run</name>
+    <name>Camel CDI :: Maven Plugins :: Camel Maven Run</name>
     <description>Maven plugin to run Camel standalone</description>
 
     <dependencies>
